--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Internet Basique</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
@@ -14,8 +14,8 @@
     <nav>
         <ul>
             <li><a href="/">Accueil</a></li>
-            <li><a href="/categorie1">Catégorie 1</a></li>
-            <li><a href="/categorie2">Catégorie 2</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/post">Post</a></li>
         </ul>
     </nav>
 
