--- a/html/News.html
+++ b/html/News.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BEEP-BO</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" type="image/jpg" href ="./pictures/header-logo.jpg">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" type="image/png" href ="/pictures/header-logo2.png">
 </head>
 <body>
     <header>
