--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <nav>
         <h2>Accueil</h2>
-        <p>Bienvenue sur notre sitequi te donne les dernières news musicales du moment !</p>
+        <p>Bienvenue sur notre site 
+            qui te donne les dernières news musicales du moment !</p>
     </nav>
 
     <main>
