--- a/html/form2.html
+++ b/html/form2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S'inscrire</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="css/styleform2.css">
+    <link rel="icon" type="image/jpg" href ="./pictures/header-logo.jpg">
 </head>
 <body>
     <form>
