--- a/html/form2.html
+++ b/html/form2.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S'inscrire</title>
-    <link rel="stylesheet" href="css/styleform2.css">
+    <link rel="stylesheet" href="/css/styleform2.css">
     <link rel="icon" type="image/jpg" href ="./pictures/header-logo.jpg">
 </head>
 <body>
-    <form>
+    <form action="/addUser.go " method="post">
         <h1>S'inscrire</h1>
         <div class="inputs">
-            <input type="text" placeholder="Identifiant" />
+            <input type="text" placeholder="ID" />
             <input type="text" placeholder="Nom" />
             <input type="text" placeholder="Prénom" />
             <input type="date" placeholder="Date de naissance" />
             <input type="email" placeholder="Email" />
+            <input type="text" placeholder="Mot de passe" />
+            <input type="text" placeholder="Confirmer mot de passe" />
         </div>
         <button type="submit">S'inscrire</button>
-        <p class="instruction">Vous avez déjà un compte ? Connectez-vous <span>ici</span>.</p>
+        <p class="instruction">Vous avez déjà un compte ? Connectez-vous <a href='form.html'>ici</a></p>
     </form>
 </body>
 </html>
