--- a/html/form.html
+++ b/html/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BEEP-BO</title>
-    <link rel="stylesheet" href="css/styleform.css">
+    <link rel="stylesheet" href="/css/styleform.css">
     <link rel="icon" type="image/jpg" href ="./pictures/header-logo.jpg">
 </head>
 <body>
@@ -15,6 +15,7 @@
 
       <div class="inputs">
         <input type="email" placeholder="Email" />
+        <input type="ID" placeholder="ID" />
         <input type="password" placeholder="Mot de passe">
       </div>
 
