--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="/">Accueil</a></li>
             <li><a href="/news">News</a></li>
             <li><a href="/post">Post</a></li>
+            <li><a href="html/form2.html">s'inscrire</a></li>
         </ul>
     </header>
 
