page login signup html finish and create page admin

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <header>
         <h1>Bienvenue sur BEEP BO</h1>
         <ul>
-            <li><a href="/">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="/news">News</a></li>
             <li><a href="/post">Post</a></li>
-            <li><a href="html/form2.html">s'inscrire</a></li>
+            <li><a href="html/signup.html">Signup</a></li>
+            <li><a href="html/login.html">Login</a></li>
+            <li><a href="html/admin.html">Administration</a></li>
         </ul>
     </header>
 
@@ -25,7 +27,7 @@
 
     <main>
         <h2>cc</h2>
-        
+
     </main>
 </body>
 </html>
